--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "eslint-config-ali"
+  "extends": "eslint-config-ali",
+  "rules": {
+    "max-len": 0,
+    "no-bitwise": 0
+  }
 }
