--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-
+node_modules
+coverage
+.nyc_output
 .DS_Store
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Editor directories and files
+*.log
+.vscode
 .idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
+dist
+compiled
+.awcache
+.rpt2_cache
+docs
